styling fix on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,10 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap');
 
+html {
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #003564;
     overflow: hidden;
     margin-left: 0;
     padding-left: 0;
+    width: 100%;
     min-width: 400px;
 }
 
@@ -159,10 +168,6 @@ body {
 }
 
 @media only screen and (max-width: 800px) {
-
-    .home {
-        margin: 30px;
-    }
     
     .intro {
         font-size: 34pt;
@@ -187,10 +192,6 @@ body {
 
 @media only screen and (max-height: 800px) {
 
-        .home {
-            margin: 30px;
-        }
-        
         .intro {
             font-size: 34pt;
         }
